--- a/test.html
+++ b/test.html
@@ -4,17 +4,24 @@
  <body>
   <script src="https://www.puck-js.com/puck.js"></script>
  
+<p id="demo"></p>
+	 
  <script>
+ var x = document.getElementById("demo");	 
+	 
   function getLocation() {
   if (navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(showPosition);
   } else { 
     console.log("Geolocation is not supported by this browser.");
+    x.innerHTML = "Geolocation is not supported by this browser.";
   }
 }
 
 function showPosition(position) {
-	console.log(position.coords.latitude + " " + position.coords.longitude);
+  console.log(position.coords.latitude + " " + position.coords.longitude);
+  x.innerHTML = "Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude;
 }
  
  getLocation();
