--- a/test.html
+++ b/test.html
@@ -3,7 +3,8 @@
  </head>
  <body>
   <script src="https://www.puck-js.com/puck.js"></script>
- 
+
+	 <p>Below is the GPS</p>
 <p id="demo"></p>
 	 
  <script>
