--- a/index2.html
+++ b/index2.html
@@ -2,15 +2,15 @@
  <head>
   <title>Dashboard</title>
   <meta name="viewport" content="width=210, initial-scale=1">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="https://ryandoel.github.io/web-testing/index.css">
  </head>
  
  
  <body style="width:210px;height:450px">
-  <link href="tinydash.css" rel="stylesheet">
-  <script src="tinydash.js"></script>
-  <script src="puck.js"></script> 
-  <script src="chart.js"></script>  
+  <link href="https://ryandoel.github.io/web-testing/tinydash.css" rel="stylesheet">
+  <script src="https://ryandoel.github.io/web-testing/tinydash.js"></script>
+  <script src="https://ryandoel.github.io/web-testing/puck.js"></script> 
+  <script src="https://ryandoel.github.io/web-testing/chart.js"></script>  
   
  
   
