--- a/test.html
+++ b/test.html
@@ -4,6 +4,11 @@
  <body>
 
 	 <p>Below is the GPS</p>
+	 <audio controls>
+  <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
+  <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 <p id="demo"></p>
 	 
  <script>
@@ -25,12 +30,11 @@ function showPosition(position) {
 }
 	 
 
-var sound = new Audio("sound.mp3");
+
 	
 
  
  getLocation();
- sound.play();
  </script>
  </body>
 </html>
