--- a/test.html
+++ b/test.html
@@ -9,6 +9,8 @@
   <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+<embed src="https://www.w3schools.com/html/horse.mp3" autostart="false" width="0" height="0" id="sound1"
+enablejavascript="true">
 <p id="demo"></p>
 	 
  <script>
@@ -29,10 +31,13 @@ function showPosition(position) {
   "<br>Longitude: " + position.coords.longitude;
 }
 	 
-
+function PlaySound(soundObj) {
+  var sound = document.getElementById(soundObj);
+  sound.Play();
+}
 
 	
-
+ PlaySound("sound1");
  
  getLocation();
  </script>
