--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@ function showPosition(position) {
 	 
 function PlaySound(soundObj) {
   var sound = document.getElementById(soundObj);
-  sound.Play();
+  sound.play();
 }
 
 	
