--- a/test.html
+++ b/test.html
@@ -9,8 +9,8 @@
   <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<embed src="https://www.w3schools.com/html/horse.mp3" autostart="false" width="0" height="0" id="sound1"
-enablejavascript="true">
+<audio src="https://www.w3schools.com/html/horse.mp3" autostart="false" width="0" height="0" id="sound1"
+enablejavascript="true"> </audio>
 <p id="demo"></p>
 	 
  <script>
